--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -752,6 +752,8 @@
           href: connector-troubleshoot-guide.md
         - name: データ フロー
           href: data-flow-troubleshoot-guide.md
+        - name: 継続的インテグレーションとデプロイ
+          href: ci-cd-github-troubleshoot-guide.md
         - name: セキュリティとアクセス制御
           href: security-and-access-control-troubleshoot-guide.md
         - name: セルフホステッド統合ランタイム
