--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -75,10 +75,14 @@
       href: ../../backup/security-baseline.md
     - name: Azure Bastion のセキュリティ ベースライン
       href: ../../bastion/security-baseline.md
+    - name: Azure Bot Network のセキュリティ ベースライン
+      href: /azure/bot-service/security-baseline?view=azure-bot-service-4.0
     - name: Azure Cache for Redis のセキュリティ ベースライン
       href: ../../azure-cache-for-redis/security-baseline.md
     - name: Azure Cognitive Search のセキュリティ ベースライン
       href: ../../search/security-baseline.md
+    - name: Azure Cosmos DB のセキュリティ ベースライン
+      href: ../../cosmos-db/security-baseline.md
     - name: Azure Data Box のセキュリティ ベースライン
       href: ../../databox/security-baseline.md
     - name: Azure Data Explorer のセキュリティ ベースライン
@@ -91,18 +95,20 @@
       href: ../../mysql/security-baseline.md
     - name: Azure Database for MariaDB のセキュリティ ベースライン
       href: ../../mariadb/security-baseline.md
-    - name: Azure Database for PostgreSQL - 単一サーバーのセキュリティ ベースライン
-      href: ../../postgresql/security-baseline.md
     - name: Azure Database for PostgreSQL - Hyperscale のセキュリティ ベースライン
       href: ../../postgresql/postgresql-hyperscale-security-baseline.md
+    - name: Azure Database for PostgreSQL - 単一サーバーのセキュリティ ベースライン
+      href: ../../postgresql/security-baseline.md
     - name: Azure Databricks のセキュリティ ベースライン
       href: /azure/databricks/scenarios/security-baseline
+    - name: Azure DDOS Protection Standard のセキュリティ ベースライン
+      href: ../fundamentals/ddos-protection-security-baseline.md
     - name: Azure Defender for IoT のセキュリティ ベースライン
       href: ../../defender-for-iot/security-baseline.md
-    - name: Azure DNS のセキュリティ ベースライン
-      href: ../../dns/security-baseline.md
     - name: Azure DevTest Labs のセキュリティ ベースライン
       href: ../../devtest-labs/security-baseline.md
+    - name: Azure DNS のセキュリティ ベースライン
+      href: ../../dns/security-baseline.md
     - name: Azure Firewall のセキュリティ ベースライン
       href: ../../firewall/security-baseline.md
     - name: Azure Firewall Manager のセキュリティ ベースライン
@@ -115,18 +121,16 @@
       href: ../../hpc-cache/security-baseline.md
     - name: Azure Information Protection のセキュリティ ベースライン
       href: /azure/information-protection/security-baseline
-    - name: Azure IoT Hub のセキュリティ ベースライン
-      href: ../../iot-hub/security-baseline.md
     - name: Azure Kubernetes Service のセキュリティ ベースライン
       href: ../../aks/security-baseline.md
     - name: Azure Lighthouse のセキュリティ ベースライン
       href: ../../lighthouse/security-baseline.md
     - name: Azure Load Balancer のセキュリティ ベースライン
       href: ../../load-balancer/security-baseline.md
-    - name: Azure Monitor のセキュリティ ベースライン
-      href: ../../azure-monitor/security-baseline.md
     - name: Azure Machine Learning のセキュリティ ベースライン
       href: ../../machine-learning/security-baseline.md
+    - name: Azure Monitor のセキュリティ ベースライン
+      href: ../../azure-monitor/security-baseline.md
     - name: Azure Migrate Learning のセキュリティ ベースライン
       href: ../../migrate/security-baseline.md
     - name: Azure Policy のセキュリティ ベースライン
@@ -141,12 +145,12 @@
       href: ../../azure-resource-manager/management/security-baseline.md
     - name: Azure Sentinel のセキュリティ ベースライン
       href: ../../sentinel/security-baseline.md
+    - name: Azure SignalR Service のセキュリティ ベースライン
+      href: ../../azure-signalr/security-baseline.md
     - name: Azure SQL Database のセキュリティ ベースライン
       href: ../../azure-sql/database/security-baseline.md
     - name: Azure Storage のセキュリティ ベースライン
       href: ../../storage/common/security-baseline.md
-    - name: Azure Traffic Manager のセキュリティ ベースライン
-      href: ../../traffic-manager/security-baseline.md
     - name: Azure Web Application Firewall のセキュリティ ベースライン
       href: ../../web-application-firewall/security-baseline.md
     - name: Batch のセキュリティ ベースライン
@@ -163,16 +167,12 @@
       href: ../../container-registry/security-baseline.md
     - name: Content Delivery Network のセキュリティ ベースライン
       href: ../../cdn/security-baseline.md
-    - name: Cosmos DB のセキュリティ ベースライン
-      href: ../../cosmos-db/security-baseline.md
     - name: Cost Management のセキュリティ ベースライン
       href: ../../cost-management-billing/security-baseline.md
     - name: カスタマー ロックボックスのセキュリティ ベースライン
       href: ../fundamentals/customer-lockbox-security-baseline.md
     - name: Data Lake Analytics のセキュリティ ベースライン
       href: ../../data-lake-analytics/security-baseline.md
-    - name: DDOS Protection のセキュリティ ベースライン
-      href: ../fundamentals/ddos-protection-security-baseline.md
     - name: Event Grid のセキュリティ ベースライン
       href: ../../event-grid/security-baseline.md
     - name: Event Hubs のセキュリティ ベースライン
@@ -181,6 +181,8 @@
       href: ../../expressroute/security-baseline.md
     - name: HDInsight のセキュリティ ベースライン
       href: ../../hdinsight/security-baseline.md
+    - name: IoT Hub のセキュリティ ベースライン
+      href: ../../iot-hub/security-baseline.md
     - name: Key Vault のセキュリティ ベースライン
       href: ../../key-vault/general/security-baseline.md
     - name: Logic Apps のセキュリティ ベースライン
@@ -201,6 +203,8 @@
       href: ../../stream-analytics/security-baseline.md
     - name: Synapse Analytics のセキュリティ ベースライン
       href: ../../synapse-analytics/security-baseline.md
+    - name: Traffic Manager のセキュリティ ベースライン
+      href: ../../traffic-manager/security-baseline.md
     - name: Virtual Machine Scale Sets のセキュリティ ベースライン
       href: ../../virtual-machine-scale-sets/security-baseline.md
     - name: Virtual Machines Linux のセキュリティ ベースライン
