--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -62,7 +62,7 @@
         - name: Azure Sentinel にオンボードする
           href: scenario-onboard-azure-sentinel.md
         - name: Azure Security Center にオンボードする
-          href: /security-center/quickstart-onboard-machines
+          href: ../../security-center/quickstart-onboard-machines.md
     - name: トラブルシューティング
       items:
         - name: エージェントの接続に関する問題
