--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -109,4 +109,4 @@
 - name: リファレンス
   items:
     - name: Azure PowerShell
-      href: 'https://docs.microsoft.com/powershell/module/az.vmware/'
+      href: /powershell/module/az.vmware/
