--- a/articles/cost-management-billing/reservations/index.yml
+++ b/articles/cost-management-billing/reservations/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: bandersmsft
   ms.author: banders
   ms.date: 04/30/2020
-  ms.openlocfilehash: 397141cbb131611d39f906aab594500d3ff05825
-  ms.sourcegitcommit: 9889a3983b88222c30275fd0cfe60807976fd65b
+  ms.openlocfilehash: d6f3b3f6844de00a1d175c1ba32704e55585cd43
+  ms.sourcegitcommit: 9eda79ea41c60d58a4ceab63d424d6866b38b82d
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/20/2020
-  ms.locfileid: "94988818"
+  ms.lasthandoff: 11/30/2020
+  ms.locfileid: "96344217"
 landingContent:
 - title: 予約の購入
   linkLists:
@@ -35,7 +35,7 @@ landingContent:
     - text: Azure Synapse Analytics
       url: prepay-sql-data-warehouse-charges.md
     - text: 仮想マシン
-      url: ../../virtual-machines/windows/prepay-reserved-vm-instances.md?toc=/azure/cost-management-billing/reservations/toc.json
+      url: ../../virtual-machines/prepay-reserved-vm-instances.md?toc=%2fazure%2fcost-management-billing%2freservations%2ftoc.json
     - text: Azure Storage
       url: ../../storage/blobs/storage-blob-reserved-capacity.md?toc=/azure/cost-management-billing/reservations/toc.json
     - text: Cosmos DB
