--- a/articles/data-share/index.yml
+++ b/articles/data-share/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: hrasheed-msft
   ms.author: hrasheed
   ms.date: 10/20/2020
-  ms.openlocfilehash: cd1e23d464baa593ed5f63683664ca355e467168
-  ms.sourcegitcommit: ce8eecb3e966c08ae368fafb69eaeb00e76da57e
+  ms.openlocfilehash: 893386d441c8e1b5d247231c57c53f8ea90a7b19
+  ms.sourcegitcommit: 9eda79ea41c60d58a4ceab63d424d6866b38b82d
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/21/2020
-  ms.locfileid: "92311695"
+  ms.lasthandoff: 11/30/2020
+  ms.locfileid: "96350808"
 landingContent:
 - title: Azure Data Share について
   linkLists:
@@ -49,7 +49,7 @@ landingContent:
     - text: Azure SQL Database または Synapse Analytics からの共有
       url: how-to-share-from-sql.md
     - text: Azure Data Explorer からの共有
-      url: https://docs.microsoft.com/azure/data-explorer/data-share
+      url: /azure/data-explorer/data-share
 - title: 監視と管理
   linkLists:
   - linkListType: how-to-guide
