--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -1,5 +1,5 @@
 - name: Azure Stack Edge Pro と Data Box Gateway のドキュメント
-  href: /azure/databox-online/
+  href: ./index.yml
   expanded: true
 - name: Azure Stack Edge Pro - GPU
   items:
@@ -186,11 +186,11 @@
         - name: API、SDK、PowerShell を介した IoT Edge ロール
           href: azure-stack-edge-gpu-iot-edge-api-update.md
         - name: Azure PowerShell
-          href: 'https://docs.microsoft.com/powershell/module/az.stackedge/?view=azps-4.4.0#stack_edge'
+          href: /powershell/module/az.stackedge/?view=azps-4.4.0#stack_edge
         - name: REST API
-          href: 'https://docs.microsoft.com/rest/api/databoxedgegateway'
+          href: /rest/api/databoxedgegateway
         - name: .NET SDK
-          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/databoxedge/databoxgateway?view=azure-dotnet'
+          href: /dotnet/api/overview/azure/databoxedge/databoxgateway?view=azure-dotnet
 - name: Azure Stack Edge Pro - FPGA
   items:
     - name: 概要
@@ -274,11 +274,11 @@
     - name: リファレンス
       items:
         - name: Azure PowerShell
-          href: 'https://docs.microsoft.com/powershell/module/az.stackedge/?view=azps-4.4.0#stack_edge'
+          href: /powershell/module/az.stackedge/?view=azps-4.4.0#stack_edge
         - name: REST API
-          href: 'https://docs.microsoft.com/rest/api/databoxedgegateway'
+          href: /rest/api/databoxedgegateway
         - name: .NET SDK
-          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/databoxedge/databoxgateway?view=azure-dotnet'
+          href: /dotnet/api/overview/azure/databoxedge/databoxgateway?view=azure-dotnet
 - name: Azure Stack Edge Pro R
   items:
     - name: 概要
