--- a/articles/cognitive-services/QnAMaker/index.yml
+++ b/articles/cognitive-services/QnAMaker/index.yml
@@ -11,12 +11,12 @@ metadata:
   services: cognitive-services
   title: QnA Maker のドキュメント
   description: QnA Maker は、データに基づく対話型の Q&A レイヤーを作成できるクラウドベースの API サービスです。 QnA Maker を使用すると、FAQ ドキュメント、URL、製品マニュアルなどの半構造化コンテンツからの質問と回答サービスをいっそう強力にできます。 QnA Maker サービスでは、ユーザーが自然言語を使って行った質問に対し、ナレッジにある Q&A から回答となる可能性が最も高いものが提示されます。
-  ms.openlocfilehash: 487e783aa0c3ac5ad294c34f8522ee54fbfd6aea
-  ms.sourcegitcommit: 10d00006fec1f4b69289ce18fdd0452c3458eca5
+  ms.openlocfilehash: 54c5e8c880020ac4c29dc730902dadef10838390
+  ms.sourcegitcommit: 9eda79ea41c60d58a4ceab63d424d6866b38b82d
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/21/2020
-  ms.locfileid: "95021339"
+  ms.lasthandoff: 11/30/2020
+  ms.locfileid: "96338090"
 landingContent:
 - title: QnA Maker について
   linkLists:
@@ -34,18 +34,12 @@ landingContent:
     links:
     - text: 開発ライフサイクル
       url: concepts/development-lifecycle-knowledge-base.md
-    - text: データ ソース
-      url: concepts/knowledge-base.md
   - linkListType: video
     links:
     - text: 数分でボットを作成する
       url: https://channel9.msdn.com/Shows/AI-Show/Build-a-Bot-in-Minutes-with-QnA-Maker
 - title: ナレッジ ベースを作成し、編集する
   linkLists:
-  - linkListType: concept
-    links:
-    - text: ナレッジ ベースとは
-      url: concepts/knowledge-base.md
   - linkListType: get-started
     links:
     - text: クイック スタート:新しいナレッジ ベースの作成
@@ -95,11 +89,11 @@ landingContent:
   - linkListType: get-started
     links:
     - text: 'ポータル: Azure Bot Service のボットを作成する'
-      url: tutorials/create-qna-bot.md
+      url: ./quickstarts/create-publish-knowledge-base.md#create-a-bot
     - text: Power Apps:QnA Maker を使ったボットを作成する
       url: tutorials/integrate-with-power-virtual-assistant-fallback-topic.md
     - text: Bot Framework:LUIS アプリと QnA Maker アプリの間をディスパッチする
-      url: https://docs.microsoft.com/azure/bot-service/bot-builder-tutorial-dispatch?view=azure-bot-service-4.0&tabs=cs
+      url: /azure/bot-service/bot-builder-tutorial-dispatch?tabs=cs&view=azure-bot-service-4.0
     - text: その他のボットのサンプル
       url: https://github.com/Microsoft/BotBuilder-Samples/blob/master/README.md
 - title: リファレンス
@@ -109,15 +103,15 @@ landingContent:
     - text: ナレッジ ベースの制限
       url: limits.md
     - text: API の作成
-      url: https://docs.microsoft.com/rest/api/cognitiveservices/qnamaker/knowledgebase
+      url: /rest/api/cognitiveservices/qnamaker/knowledgebase
     - text: 回答の生成 API
-      url: https://docs.microsoft.com/rest/api/cognitiveservices/qnamaker4.0/Runtime
+      url: /rest/api/cognitiveservices/qnamaker4.0/Runtime
     - text: .Net SDK のリファレンス ドキュメント
-      url: https://docs.microsoft.com/dotnet/api/microsoft.azure.cognitiveservices.knowledge.qnamaker?view=azure-dotnet
+      url: /dotnet/api/microsoft.azure.cognitiveservices.knowledge.qnamaker?view=azure-dotnet
     - text: Azure PowerShell
-      url: https://docs.microsoft.com/powershell/module/az.cognitiveservices/?view=azps-2.6.0#cognitive_services
+      url: /powershell/module/az.cognitiveservices/?view=azps-2.6.0#cognitive_services
     - text: Azure コマンド ライン インターフェイス (CLI)
-      url: https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az-cognitiveservices-list
+      url: /cli/azure/cognitiveservices?view=azure-cli-latest#az-cognitiveservices-list
 - title: ヘルプとフィードバック
   linkLists:
   - linkListType: reference
