--- a/articles/key-vault/keys/toc.yml
+++ b/articles/key-vault/keys/toc.yml
@@ -13,6 +13,8 @@
       href: quick-create-powershell.md
     - name: ポータル
       href: quick-create-portal.md
+    - name: .NET
+      href: quick-create-net.md
     - name: Python
       href: quick-create-python.md
     - name: ARM テンプレート
