commit translated contents

--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 09/25/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 2f8379447edbe6ce7d74780e2f87b79cf77c72b7
-  ms.sourcegitcommit: c95e2d89a5a3cf5e2983ffcc206f056a7992df7d
+  ms.openlocfilehash: aeb75bcfb25fdfb23e559b3f07f33c23c5f927de
+  ms.sourcegitcommit: 6a350f39e2f04500ecb7235f5d88682eb4910ae8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/24/2020
-  ms.locfileid: "95527039"
+  ms.lasthandoff: 12/01/2020
+  ms.locfileid: "96458179"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -320,11 +320,11 @@ productDirectory:
     - iot
     url: stream-analytics/index.yml
   - title: Azure Synapse Analytics
-    summary: 分析情報を得る時間の点で比類のない無制限の分析サービス (以前の SQL Data Warehouse)
+    summary: 制限のない分析サービスで分析情報を得るまでの時間を短縮する
     imageSrc: https://static.docs.com/ui/media/product/azure/synapse.svg
     azureCategories:
     - analytics
-    url: synapse-analytics/sql-data-warehouse/index.yml
+    url: synapse-analytics/index.yml
   - title: Data Catalog
     summary: エンタープライズ データ アセットからより多くの価値を引き出す
     imageSrc: https://static.docs.com/ui/media/product/azure/data-catalog.svg
@@ -501,7 +501,7 @@ productDirectory:
     azureCategories:
     - compute
     - databases
-    url: ./azure-sql/virtual-machines/windows/sql-server-on-azure-vm-iaas-what-is-overview.md?toc=%252fazure%252fvirtual-machines%252fwindows%252ftoc.json
+    url: ./azure-sql/virtual-machines/windows/sql-server-on-azure-vm-iaas-what-is-overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
   - title: Static Web Apps (プレビュー)
     summary: ソース コードからグローバルな高可用性まで、合理化されたフルスタック開発を実現する最新の Web アプリ サービス
     imageSrc: ./media/index/static-apps.svg
