--- a/articles/marketplace/index.yml
+++ b/articles/marketplace/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: mingshen-ms
   ms.author: mingshen
   ms.date: 09/02/2020
-  ms.openlocfilehash: ee2bb685ba1313bcb54d8f32c2952a03258829b3
-  ms.sourcegitcommit: b4880683d23f5c91e9901eac22ea31f50a0f116f
+  ms.openlocfilehash: b8b7de41dce5c36cb41db247e177fa5084878fb1
+  ms.sourcegitcommit: 6a350f39e2f04500ecb7235f5d88682eb4910ae8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/11/2020
-  ms.locfileid: "94491547"
+  ms.lasthandoff: 12/01/2020
+  ms.locfileid: "96462495"
 landingContent:
 - title: コマーシャル マーケットプレースでの作業
   linkLists:
@@ -60,15 +60,15 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: '[Summary]\(概要\) ダッシュボード'
-      url: ./partner-center-portal/summary-dashboard.md
+      url: ./summary-dashboard.md
     - text: '[Marketplace の分析情報] ダッシュボード'
-      url: ./partner-center-portal/insights-dashboard.md
+      url: ./insights-dashboard.md
     - text: '[使用状況] ダッシュボード'
-      url: ./partner-center-portal/usage-dashboard.md
+      url: ./usage-dashboard.md
     - text: 顧客ダッシュボード
-      url: ./partner-center-portal/customer-dashboard.md
+      url: ./customer-dashboard.md
     - text: '[注文] ダッシュボード'
-      url: ./partner-center-portal/orders-dashboard.md
+      url: ./orders-dashboard.md
     - text: '[ダウンロード] ダッシュボード'
       url: ./partner-center-portal/downloads-dashboard.md
     - text: '[評価とレビュー] ダッシュボード'
@@ -82,7 +82,7 @@ landingContent:
     - text: 仮想マシンのオファー
       url: ./marketplace-virtual-machines.md
     - text: Azure アプリケーション プラン
-      url: ./partner-center-portal/create-new-azure-apps-offer.md
+      url: ./create-new-azure-apps-offer.md
     - text: Dynamics 365 for Customer Engagement と PowerApps のオファー
       url: ./partner-center-portal/create-new-customer-engagement-offer.md
     - text: Dynamics 365 Business Central のオファー
