--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -453,7 +453,7 @@
                       href: ../image-version-vm-powershell.md
                     - name: マネージド ディスクまたはスナップショットから
                       href: ../image-version-snapshot-powershell.md
-                    - name: マネージド イメージから移行する
+                    - name: マネージド イメージの複製
                       href: ../image-version-managed-image-powershell.md
                     - name: 別のギャラリーからコピーする
                       href: ../image-version-another-gallery-powershell.md
@@ -475,7 +475,7 @@
                       href: ../image-version-vm-cli.md
                     - name: マネージド ディスクまたはスナップショットから
                       href: ../image-version-snapshot-cli.md
-                    - name: マネージド イメージから移行する
+                    - name: マネージド イメージの複製
                       href: ../image-version-managed-image-cli.md
                     - name: 別のギャラリーからコピーする
                       href: ../image-version-another-gallery-cli.md
@@ -561,7 +561,7 @@
           href: ../managed-disk-from-image-version.md
     - name: VM のセキュリティ保護
       items:
-        - name: Recommendations
+        - name: 推奨事項
           href: ../security-recommendations.md
         - name: ジャストインタイム アクセス
           href: ../../security-center/security-center-just-in-time.md
