--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -50,6 +50,8 @@
           href: costs/manage-automation.md
         - name: パートナー向け Cost Management
           href: costs/get-started-partners.md
+        - name: EA レポートから Azure Resource Manager API への移行
+          href: costs/migrate-from-enterprise-reporting-to-azure-resource-manager-apis.md
     - name: Reservations
       items:
         - name: Azure の予約とは
@@ -327,7 +329,7 @@
             - name: Azure Synapse Analytics
               href: reservations/prepay-sql-data-warehouse-charges.md?toc=/azure/cost-management-billing/toc.json
             - name: 仮想マシン
-              href: ../virtual-machines/windows/prepay-reserved-vm-instances.md?toc=/azure/cost-management-billing/toc.json
+              href: ../virtual-machines/prepay-reserved-vm-instances.md?toc=%2fazure%2fcost-management-billing%2ftoc.json
         - name: 購入後の表示、管理、最適化
           items:
             - name: 予約と使用率の表示
