--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -215,6 +215,8 @@
               href: ../../search/search-blob-ai-integration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: BLOB データに対するフルテキスト検索
               href: ../../search/search-blob-storage-integration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: BLOB インベントリを使用した BLOB データの管理
+              href: blob-inventory.md
         - name: データ移行
           items:
             - name: データ転送ソリューションの比較
@@ -765,7 +767,7 @@
           items:
             - name: AzCopy
               items:
-                - name: はじめに
+                - name: 作業開始
                   href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Data Lake Storage の使用
                   href: ../common/storage-use-azcopy-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
