--- a/articles/security/fundamentals/TOC.yml
+++ b/articles/security/fundamentals/TOC.yml
@@ -72,7 +72,7 @@
     - name: ベスト プラクティス
       href: network-best-practices.md
     - name: DDoS Protection のベスト プラクティス
-      href: 'https://docs.microsoft.com/azure/ddos-protection/fundamental-best-practices'
+      href: ../../ddos-protection/fundamental-best-practices.md
     - name: DDoS Protection のセキュリティ ベースライン
       href: ddos-protection-security-baseline.md
     - name: 未解決の DNS とサブドメインの引き継ぎ
