--- a/articles/service-fabric/index.yml
+++ b/articles/service-fabric/index.yml
@@ -7,12 +7,12 @@ metadata:
   author: erikadoyle
   ms.author: edoyle
   ms.date: 07/31/2020
-  ms.openlocfilehash: 9bce6570cef2703bf1ad63d92c55bb3794927a8b
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 2f9b7264fe8199cb25772b0598354e474196ca93
+  ms.sourcegitcommit: d60976768dec91724d94430fb6fc9498fdc1db37
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91408703"
+  ms.lasthandoff: 12/02/2020
+  ms.locfileid: "96499800"
 landingContent:
 - title: Service Fabric の管理対象クラスターを試す (プレビュー)
   linkLists:
@@ -133,7 +133,7 @@ landingContent:
     - text: クラスターのセキュリティ
       url: service-fabric-cluster-security.md
     - text: Service Fabric のセキュリティ コントロール
-      url: service-fabric-security-controls.md
+      url: ./security-baseline.md
     - text: Service Fabric のシークレット ストア
       url: service-fabric-application-secret-store.md
   - linkListType: how-to-guide
