--- a/articles/analysis-services/TOC.yml
+++ b/articles/analysis-services/TOC.yml
@@ -30,9 +30,9 @@
     - name: サービス プリンシパルによる自動化
       href: analysis-services-service-principal.md
     - name: クライアント ライブラリ
-      href: /analysis-services/client-libraries?view=azure-analysis-services-current
+      href: /analysis-services/client-libraries?view=azure-analysis-services-current&preserve-view=true
     - name: 互換性レベル
-      href: /analysis-services/tabular-models/compatibility-level-for-tabular-models-in-analysis-services?view=azure-analysis-services-current
+      href: /analysis-services/tabular-models/compatibility-level-for-tabular-models-in-analysis-services?view=azure-analysis-services-current&preserve-view=true
     - name: オンプレミス データ ソースへの接続
       href: analysis-services-gateway.md
     - name: サーバーへの接続
@@ -112,9 +112,9 @@
     - name: Power Query M
       href: /powerquery-m/power-query-m-reference
     - name: Tabular Model Scripting Language (TMSL)
-      href: /analysis-services/tmsl/tabular-model-scripting-language-tmsl-reference?view=asallproducts-allversions
+      href: /analysis-services/tmsl/tabular-model-scripting-language-tmsl-reference?view=azure-analysis-services-current&preserve-view=true
     - name: 表形式オブジェクト モデル (TOM)
-      href: /analysis-services/tom/introduction-to-the-tabular-object-model-tom-in-analysis-services-amo?view=asallproducts-allversions
+      href: /analysis-services/tom/introduction-to-the-tabular-object-model-tom-in-analysis-services-amo?view=azure-analysis-services-current&preserve-view=true
     - name: リソースとオブジェクトの制限
       href: analysis-services-capacity-limits.md
 - name: リソース
